kubernetes/components/network-policies/fastapi-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-allow-to-ollama
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: llm-api
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: ollama
      ports:
        - protocol: TCP
          port: 11434
